
Changelog
=========

4.2.0 (unreleased)
------------------

- Use checkbox widget to select participations roles.
  This fixes an issue with ie10 and ie11 where no selection could be made.
  [deiferni]

- Keep predecessor's issuing_org_unit for successor tasks.
  [phgross]

- Replaced committees listing tab with a committes overview listing.
  [phgross]

- Switch to PostgreSQL for local development.
  [lgraf]

- Only assign 'Remove GEVER content' permission to manager by default.
  [lgraf]

- Protect 'remove_confirmation' view with 'Remove GEVER content' permission.
  [lgraf]

- Rewrite Redirector adapter to use cookies instead of sessions.
  Accessing sessions causes the transaction to be a write.
  [jone]

- Added committee overview tab.
  [phgross]

- Fixed `only_active` membership query.
  [phgross]

- Style protocol view in opengever.meeting.
  Implement sticky headings and autosize textareas.
  [Kevin Bieri]

- Meeting listing improvements:
    - Disable selection links for listings without checkbox column.
    - Extend proposal listing columns.
    - Fixed sorting and filtering for proposal and submittedproposal listings.
    - Fixed sorting and filtering for comitteecontainer tabs.
    - Fixed sorting and filtering for committee tabs.

- Task workflow: Make workflow also manage add permissions for mails,
  the same way it does for documents. In particular, this avoids mails
  being addable in tasks in state 'tested-and-closed'.
  [lgraf]

- Livesearch: Dropped unused icon <img> tag.
  [phgross]

- Style meeting form.
  Add agendaitem sorting implementation.
  [deiferni, Kevin Bieri]

- Wrap checks in is_pasting_allowed in a try..except for safety.
  [lgraf]

- Make sure response descriptions are always unicode.
  [lgraf]

- Add ftw.testbrowser widget for our customized AutocompleteWidget.
  [lgraf]

- Only show "Paste" action if objects in clipboard are in allowed addable
  types of target container.
  [lgraf]
